--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
         <section class="container">
             <div class="first-section-div-1">
                 <div class="first-section-div-2">
-                    <h1 class="first-section-header-1">The Greatest show on the earth</h1>
-                    <p class="first-section-paragraph-1">Football is the world's most popular ball game in
-                        numbers of
-                        participants and spectators.</p> <br>
-                    <a class="first-section-watch-live" href="google.com">Watch Live <i class="fa-solid fa-angle-right">
+                    <h1 class="first-section-header">The Greatest show on the earth</h1>
+
+                    <p class="first-section-paragraph">Football is the world's most popular ball game in
+                        numbers of participants and spectators.</p>
+
+                    <br>
+                    <a class="first-section-watch-live" href="google.com"><span>Watch Live</span> <i
+                            class="fa-solid fa-angle-right">
                         </i>
                     </a>
                 </div>
@@ -33,23 +36,30 @@
 
     <main>
         <section class="container">
-            <article>
-                <div class="second-section-div-1">
+
+
+            <div class="second-section-div-1">
+
+                <div class="second-section1">
                     <div class="second-section-div-2">
-                        <a class="upcoming-match" href="google.com">Upcoming Match
+                        <a class="upcoming-match" href="upcoming-match.html">Upcoming Match
                         </a>
                         <a class="all-group" href="google.com">All Group
                         </a>
                         <a class="blog" href="google.com">Blog
                         </a>
                     </div>
+                </div>
+
+                <div class="second-section2">
                     <div class="second-section-div-3">
                         <div class="blog-image">
                             <img src="assets/Blog Image.png" alt="">
                         </div>
                         <div class="blog-info">
                             <button type="button" class="second-section-button">Transfer</button>
-                            <p class="second-section-paragraph-1">Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            <p class="second-section-paragraph-1">Transfer Live: Chlesea in talks over Kimpenbe
+                                transfer
                             </p>
                             <div class="span-gap">
                                 <span class="span-gap1"><i class="fa-regular fa-clock"></i> 10h</span>
@@ -63,7 +73,8 @@
                         </div>
                         <div class="blog-info">
                             <button type="button" class="second-section-button">Transfer</button>
-                            <p class="second-section-paragraph-1">Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            <p class="second-section-paragraph-1">Transfer Live: Chlesea in talks over Kimpenbe
+                                transfer
                             </p>
                             <div class="span-gap">
                                 <span class="span-gap1"><i class="fa-regular fa-clock"></i> 10h</span>
@@ -77,7 +88,8 @@
                         </div>
                         <div class="blog-info">
                             <button type="button" class="second-section-button">Transfer</button>
-                            <p class="second-section-paragraph-1">Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            <p class="second-section-paragraph-1">Transfer Live: Chlesea in talks over Kimpenbe
+                                transfer
                             </p>
                             <div class="span-gap">
                                 <span class="span-gap1"><i class="fa-regular fa-clock"></i> 10h</span>
@@ -86,14 +98,14 @@
                         </div>
                     </div>
 
-                    <div class="second-section-div-2 display">
-                        <a class="upcoming-match" href="google.com">Upcoming Match
-                        </a>
-                        <a class="all-group" href="google.com">All Group
-                        </a>
-                        <a class="blog" href="google.com">Blog
-                        </a>
-                    </div>
+                    <!-- <div class="second-section-div-2 display">
+                            <a class="upcoming-match" href="google.com">Upcoming Match
+                            </a>
+                            <a class="all-group" href="google.com">All Group
+                            </a>
+                            <a class="blog" href="google.com">Blog
+                            </a>
+                        </div> -->
                     <div class="second-section-div-3">
                         <div class="blog-image">
                             <img src="assets/Blog Image.png" alt="">
@@ -109,7 +121,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="second-section-div-3">
+                    <div class="second-section-div-3 display">
                         <div class="blog-image">
                             <img src="assets/Blog Image.png" alt="">
                         </div>
@@ -124,7 +136,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="second-section-div-3">
+                    <div class="second-section-div-3 display">
                         <div class="blog-image">
                             <img src="assets/Blog Image.png" alt="">
                         </div>
@@ -141,7 +153,10 @@
                     </div>
 
                 </div>
-            </article>
+
+            </div>
+
+            <a href="" class="view-all">View All</a>
         </section>
     </main>
 
