--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                         numbers of participants and spectators.</p>
 
                     <br>
-                    <a class="first-section-watch-live" href="google.com"><span>Watch Live</span> <i
-                            class="fa-solid fa-angle-right">
+                    <a target="_blank" class="first-section-watch-live" href="https://www.youtube.com/"><span>Watch
+                            Live</span> <i class="fa-solid fa-angle-right">
                         </i>
                     </a>
                 </div>
@@ -35,18 +35,17 @@
     </header>
 
     <main>
-        <section class="container">
-
+        <section>
 
             <div class="second-section-div-1">
 
                 <div class="second-section1">
                     <div class="second-section-div-2">
-                        <a class="upcoming-match" href="upcoming-match.html">Upcoming Match
+                        <a target="_blank" class="upcoming-match" href="upcoming-match.html">Upcoming Match
                         </a>
-                        <a class="all-group" href="google.com">All Group
+                        <a target="_blank" class="all-group" href="index.html">All Group
                         </a>
-                        <a class="blog" href="google.com">Blog
+                        <a target="_blank" class="blog" href="google.com">Blog
                         </a>
                     </div>
                 </div>
