--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -21,8 +21,8 @@
                         numbers of participants and spectators.</p>
 
                     <br>
-                    <a class="first-section-watch-live" href="google.com"><span>Watch Live</span> <i
-                            class="fa-solid fa-angle-right">
+                    <a target="_blank" class="first-section-watch-live" href="https://www.youtube.com/"><span>Watch
+                            Live</span> <i class="fa-solid fa-angle-right">
                         </i>
                     </a>
                 </div>
@@ -42,11 +42,11 @@
 
                 <div class="second-section1">
                     <div class="second-section-div-2">
-                        <a class="upcoming-match" href="google.com">Upcoming Match
+                        <a class="upcoming-match upcoming-match2" href="google.com">Upcoming Match
                         </a>
-                        <a class="all-group" href="google.com">All Group
+                        <a class="all-group all-group2" href="google.com">All Group
                         </a>
-                        <a class="blog" href="google.com">Blog
+                        <a class="blog blog2" href="google.com">Blog
                         </a>
                     </div>
                 </div>
