--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -44,7 +44,7 @@
                     <div class="second-section-div-2">
                         <a class="upcoming-match upcoming-match2" href="google.com">Upcoming Match
                         </a>
-                        <a class="all-group all-group2" href="google.com">All Group
+                        <a class="all-group all-group2" href="index.html">All Group
                         </a>
                         <a class="blog blog2" href="google.com">Blog
                         </a>
