--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     <div class="second-section-div-2">
                         <a target="_blank" class="upcoming-match" href="upcoming-match.html">Upcoming Match
                         </a>
-                        <a target="_blank" class="all-group" href="index.html">All Group
+                        <a target="_blank" class="all-group" href="">All Group
                         </a>
-                        <a target="_blank" class="blog" href="google.com">Blog
+                        <a target="_blank" class="blog" href="">Blog
                         </a>
                     </div>
                 </div>
@@ -175,11 +175,13 @@
         </div>
 
         <div class="icon">
-            <a href="https://www.facebook.com/?stype=lo&jlou=Aff4jLifXOnEj-YfAt8a8xa5vgLiH630nKxX_xsE2ua5JK-GXoJ_ZbkFAeGb0JKBQ0P9qW30uo5cz4ty0pqVjbvYl-xdE9sCgcMT7ZwPelL65w&smuh=59583&lh=Ac-ELopn2DunTXlTse4"
+            <a target="_blank"
+                href="https://www.facebook.com/?stype=lo&jlou=Aff4jLifXOnEj-YfAt8a8xa5vgLiH630nKxX_xsE2ua5JK-GXoJ_ZbkFAeGb0JKBQ0P9qW30uo5cz4ty0pqVjbvYl-xdE9sCgcMT7ZwPelL65w&smuh=59583&lh=Ac-ELopn2DunTXlTse4"
                 class="facebook"><i class="fa-brands fa-facebook-square"></i></a>
-            <a href="https://www.linkedin.com/login?fromSignIn=true&trk=guest_homepage-basic_nav-header-signin"><i
+            <a target="_blank"
+                href="https://www.linkedin.com/login?fromSignIn=true&trk=guest_homepage-basic_nav-header-signin"><i
                     class="fa-brands fa-linkedin"></i></a>
-            <a href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter-square"></i></a>
+            <a target="_blank" href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter-square"></i></a>
         </div>
 
     </footer>
