--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -46,7 +46,7 @@
                         </a>
                         <a class="all-group all-group2" href="index.html">All Group
                         </a>
-                        <a class="blog blog2" href="google.com">Blog
+                        <a class="blog blog2" href="">Blog
                         </a>
                     </div>
                 </div>
@@ -168,11 +168,13 @@
         </div>
 
         <div class="icon">
-            <a href="https://www.facebook.com/?stype=lo&jlou=Aff4jLifXOnEj-YfAt8a8xa5vgLiH630nKxX_xsE2ua5JK-GXoJ_ZbkFAeGb0JKBQ0P9qW30uo5cz4ty0pqVjbvYl-xdE9sCgcMT7ZwPelL65w&smuh=59583&lh=Ac-ELopn2DunTXlTse4"
+            <a target="_blank"
+                href="https://www.facebook.com/?stype=lo&jlou=Aff4jLifXOnEj-YfAt8a8xa5vgLiH630nKxX_xsE2ua5JK-GXoJ_ZbkFAeGb0JKBQ0P9qW30uo5cz4ty0pqVjbvYl-xdE9sCgcMT7ZwPelL65w&smuh=59583&lh=Ac-ELopn2DunTXlTse4"
                 class="facebook"><i class="fa-brands fa-facebook-square"></i></a>
-            <a href="https://www.linkedin.com/login?fromSignIn=true&trk=guest_homepage-basic_nav-header-signin"><i
+            <a target="_blank"
+                href="https://www.linkedin.com/login?fromSignIn=true&trk=guest_homepage-basic_nav-header-signin"><i
                     class="fa-brands fa-linkedin"></i></a>
-            <a href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter-square"></i></a>
+            <a target="_blank" href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter-square"></i></a>
         </div>
 
     </footer>
